# ffpa-attn

./: CMakeLists.txt  env.py  setup.py
csrc/cuffpa/: launch_templates.cuh
ffpa_attn/: interface.py
tests/: test_ffpa_attn.py
